--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -10,7 +10,7 @@
         <!-- <div>ヘッダー</div> -->
         <div class="weapons-section">
             <div class="weapons-title">
-                <img src="" alt="">
+                <img src="../imgs/reticle.svg" alt="Reticle images">
                 <h1>Weapons</h1>
             </div>
             <div class="weapons-area">
