--- a/pages/index.html
+++ b/pages/index.html
@@ -22,7 +22,7 @@
                 <ul>
 
                     <li><img src="../imgs/knife.png" height="30px"><p>Knives</p></li>
-                    <li>test</li>
+                    <li>change</li>
                     <li>test</li>
 
                 </ul>
