--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Home</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
+
     </head>
+
     <body>
+
+        <nav>
+
+            <img src="imgs/logo.png"
+
+            <menu>
+
+                <ul>
+
+                    <li><p>Knives</p></li>
+                    <li><p>Weapons</p></li>
+                    <li><p>Cases</p></li>
+
+                </ul>
+
+            </menu>
+
+        </nav>
         
+        <script src="" async defer></script>
+
     </body>
+
 </html>
