mao branch first commit

--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -11,7 +11,7 @@
         <div class="weapons-section">
             <div class="weapons-title">
                 <img src="../imgs/reticle.svg" alt="Reticle images">
-                <h1>Weapons</h1>
+                <h1>Weapon</h1>
             </div>
             <div class="weapons-area">
                 <ul class="weapons">
