change css to avoid conflicts

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
         <nav>
 
-            <img src="imgs/logo.png"
+            <a id="logo" href="index.html"><img src="imgs/logo.png" height="80px"></a>
 
             <menu>
 
                 <ul>
 
-                    <li><p>Knives</p></li>
-                    <li><p>Weapons</p></li>
-                    <li><p>Cases</p></li>
+                    <li><a>Knives</a></li>
+                    <li><a href="pages/weapons.html">Weapons</a></li>
+                    <li><a>Cases</a></li>
 
                 </ul>
 
