--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
         </nav>
         
+        <main>
+
+            
+
+        </main>
+
         <script src="" async defer></script>
 
     </body>
