--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/gabriel.css">
 
     </head>
 
@@ -35,7 +35,7 @@
         
         <main>
 
-            
+
 
         </main>
 
