--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -4,26 +4,63 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weapons</title>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/mao.css">
     </head>
     <body>
-        <!-- <div>ヘッダー</div> -->
-        <div class="weapons-section">
-            <div class="weapons-title">
+        <!---------------------------------------HEADER SECTION------------------------------------------>
+
+        <!---------------------------------------MAIN SECTION------------------------------------------>
+        <main class="weapons-section">
+            <header class="weapons-title">
                 <img src="../imgs/reticle.svg" alt="Reticle images">
-                <h1>Weapon</h1>
+                <h1>Weapons</h1>
+            </header>
+            <section class="weapons-area">
+                    <article class="weapon">                    
+                        <img src="../imgs/m4a4.png" alt="M4A4 image">
+                        <h2>M4A4</h2>
+                    </article>
+                    <article class="weapon">
+                        <img src="../imgs/deagle.png" alt="DEAGLE image">
+                        <h2>DEAGLE</h2>
+                    </article>
+                    <article class="weapon">
+                        <img src="../imgs/use-s.png" alt="USP-S image">
+                        <h2>USP-S</h2>
+                    </article>
+                    <article class="weapon">
+                        <img src="../imgs/awp.png" alt="AWP image">
+                        <h2>AWP</h2>
+                    </article>
+                    <article class="weapon">
+                        <img src="../imgs/glock-18.png" alt="GLOCK-18 image">
+                        <header><h2>GLOCK-18</h2></header>
+                    </article>
+                    <article class="weapon">
+                        <img src="../imgs/ak-47.png" alt="AK-47 image">
+                        <h2>AK-47</h2>
+                    </article>
+            </section>
+        </main>
+        <!---------------------------------------FOOTER SECTION------------------------------------------>
+        <footer class="footer-container">
+            <div class="footer-logo">
+                <a href="../index.html"><img src="../imgs/logo.png" alt="Logo image on footer"></a>
             </div>
-            <div class="weapons-area">
-                <ul class="weapons">
-                    <li><img src="" alt=""><h2>GLOCK-18</h2><p>0.99</p></li>
-                    <li><img src="" alt=""><h2>DEAGLE</h2><p>0.89</p></li>
-                    <li><img src="" alt=""><h2>USP-S</h2><p>0.99</p></li>
-                    <li><img src="" alt=""><h2>AWP</h2><p>4.99</p></li>
-                    <li><img src="" alt=""><h2>M4</h2><p>5.69</p></li>
-                    <li><img src="" alt=""><h2>AK-47</h2><p>5.99</p></li>
+            <div>
+                <ul class="footer-links">
+                    <li><a href="">CASES</a></li>
+                    <li><a href="">WEAPONS</a></li>
+                    <li><a href="">KNIVES</a></li>
+                </ul> 
+            </div>
+            <div>
+                <ul class="footer-sm">
+                    <a href="#"><img src="../imgs/instagram.svg" alt="Instagram account link"></a>
+                    <a href="#"><img src="../imgs/twitter.svg" alt="Twitter account link"></a>
+                    <a href="#"><img src="../imgs/facebook.svg" alt="Facebook account link"></a>
                 </ul>
             </div>
-        </div>
-        <!-- <div>フッター</div> -->
+        </footer>
     </body>
 </html>
