--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
                 <ul>
 
-                    <li><a>Knives</a></li>
-                    <li><a href="pages/weapons.html">Weapons</a></li>
-                    <li><a>Cases</a></li>
+                    <li><a><img class="micon" src="imgs/knife.png"</a></li>
+                    <li><a href="pages/weapons.html"><img class="micon" src="imgs/rifle.png" height="30px"></a></li>
+                    <li><a><img class="micon" src="imgs/case.png"></a></li>
 
                 </ul>
 
