Update mao's section

--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -16,30 +16,36 @@
                 <h1>Weapons</h1>
             </header>
             <section class="weapons-area">
-                    <article class="weapon">                    
-                        <img src="../imgs/m4a4.png" alt="M4A4 image">
-                        <h2>M4A4</h2>
-                    </article>
-                    <article class="weapon">
-                        <img src="../imgs/deagle.png" alt="DEAGLE image">
-                        <h2>DEAGLE</h2>
-                    </article>
-                    <article class="weapon">
-                        <img src="../imgs/use-s.png" alt="USP-S image">
-                        <h2>USP-S</h2>
-                    </article>
-                    <article class="weapon">
-                        <img src="../imgs/awp.png" alt="AWP image">
-                        <h2>AWP</h2>
-                    </article>
-                    <article class="weapon">
-                        <img src="../imgs/glock-18.png" alt="GLOCK-18 image">
-                        <header><h2>GLOCK-18</h2></header>
-                    </article>
-                    <article class="weapon">
-                        <img src="../imgs/ak-47.png" alt="AK-47 image">
-                        <h2>AK-47</h2>
-                    </article>
+                <article class="weapon">                    
+                    <img src="../imgs/m4a4.png" alt="M4A4 image">
+                    <h2>M4A4</h2>
+                    <a href="">Open</a>                    
+                </article>
+                <article class="weapon">
+                    <img src="../imgs/deagle.png" alt="DEAGLE image">
+                    <h2>DEAGLE</h2>
+                    <a href="">Open</a>                    
+                </article>
+                <article class="weapon">
+                    <img src="../imgs/use-s.png" alt="USP-S image">
+                    <h2>USP-S</h2>
+                    <a href="">Open</a>
+                </article>
+                <article class="weapon">
+                    <img src="../imgs/awp.png" alt="AWP image">
+                    <h2>AWP</h2>
+                    <a href="">Open</a>                    
+                </article>
+                <article class="weapon">
+                    <img src="../imgs/glock-18.png" alt="GLOCK-18 image">
+                    <header><h2>GLOCK-18</h2></header>
+                    <a href="">Open</a>
+                </article>
+                <article class="weapon">
+                    <img src="../imgs/ak-47.png" alt="AK-47 image">
+                    <h2>AK-47</h2>
+                    <a href="">Open</a>                    
+                </article>
             </section>
         </main>
         <!---------------------------------------FOOTER SECTION------------------------------------------>
