--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Home</title>
-        <meta name="description" content="">
+        <meta name="description" content="home page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/gabriel.css">
 
@@ -17,15 +17,15 @@
 
         <nav>
 
-            <a id="logo" href="index.html"><img src="imgs/logo.png" height="80px"></a>
+            <a id="logo" href="index.html"><img src="imgs/logo.png" alt="logo" height="80px"></a>
 
             <menu>
 
                 <ul>
 
-                    <li><a><img class="micon" src="imgs/knife.png"</a></li>
-                    <li><a href="pages/weapons.html"><img class="micon" src="imgs/rifle.png" height="30px"></a></li>
-                    <li><a><img class="micon" src="imgs/case.png"></a></li>
+                    <li><a><img class="micon" src="imgs/knife.png" alt="knife icon"></a></li>
+                    <li><a href="pages/weapons.html"><img class="micon" src="imgs/rifle.png" alt="weapon icon" height="30px"></a></li>
+                    <li><a><img class="micon" src="imgs/case.png" alt="case icon"></a></li>
 
                 </ul>
 
@@ -33,11 +33,40 @@
 
         </nav>
         
+        <div class="title"><img src="imgs/trending.png" alt="trending"></div>
+
         <main>
 
-
+            <div class="item1"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item2"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item3"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item4"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item5"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item6"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item7"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item8"><img class="mainimg" src="imgs/awp.png"></div>
 
         </main>
+
+        <footer class="footer-container">
+            <div class="footer-logo">
+                <a href="index.html"><img src="imgs/logo.png" alt="Logo image on footer"></a>
+            </div>
+            <div>
+                <ul class="footer-links">
+                    <li><a href="">CASES</a></li>
+                    <li><a href="">WEAPONS</a></li>
+                    <li><a href="">KNIVES</a></li>
+                </ul> 
+            </div>
+            <div>
+                <ul class="footer-sm">
+                    <a href="#"><img src="imgs/instagram.svg" alt="Instagram account link"></a>
+                    <a href="#"><img src="imgs/twitter.svg" alt="Twitter account link"></a>
+                    <a href="#"><img src="imgs/facebook.svg" alt="Facebook account link"></a>
+                </ul>
+            </div>
+        </footer>
 
         <script src="" async defer></script>
 
