Update mao's css

--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -8,7 +8,16 @@
     </head>
     <body>
         <!---------------------------------------HEADER SECTION------------------------------------------>
-
+        <nav>
+            <a id="logo" href="index.html"><img src="../imgs/logo.png" height="80px" alt="site logo"></a>
+            <menu>
+                <ul>
+                    <li><a href="../pages/knives.html"><img class="micon" src="../imgs/knife.png" alt="link image of knives section"></a></li>
+                    <li><a href="pages/weapons.html"><img class="micon" src="../imgs/rifle.png" height="30px" alt="link image of weapons section"></a></li>
+                    <li><a><img class="micon" src="../imgs/case.png" alt="link image of cases section"></a></li>
+                </ul>
+            </menu>
+        </nav>
         <!---------------------------------------MAIN SECTION------------------------------------------>
         <main class="weapons-section">
             <header class="weapons-title">
