update index and cases page/gab

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
                 <ul>
 
-                    <li><a><img class="micon" src="imgs/knife.png" alt="knife icon"></a></li>
+                    <li><a href="pages/knives.html"><img class="micon" src="imgs/knife.png" alt="knife icon"></a></li>
                     <li><a href="pages/weapons.html"><img class="micon" src="imgs/rifle.png" alt="weapon icon" height="30px"></a></li>
-                    <li><a><img class="micon" src="imgs/case.png" alt="case icon"></a></li>
+                    <li><a href="pages/cases.html"><img class="micon" src="imgs/case.png" alt="case icon"></a></li>
 
                 </ul>
 
@@ -45,6 +45,7 @@
             <div class="item6"><img class="mainimg" src="imgs/awp.png"></div>
             <div class="item7"><img class="mainimg" src="imgs/awp.png"></div>
             <div class="item8"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item9"><img class="mainimg" src="imgs/awp.png"></div>
 
         </main>
 
