Finish mao's section /mao

--- a/pages/knives.html
+++ b/pages/knives.html
@@ -8,62 +8,62 @@
     </head>
     <body>
         <nav>
-            <a id="logo" href="index.html"><img src="../imgs/logo.png" height="80px" alt="site logo"></a>
+            <a id="logo" href="../index.html"><img src="../imgs/logo.png" height="80px" alt="site logo"></a>
             <menu>
                 <ul>
                     <li><a href="../pages/knives.html"><img class="micon" src="../imgs/knife.png" alt="link image of knives section"></a></li>
-                    <li><a href="pages/weapons.html"><img class="micon" src="../imgs/rifle.png" height="30px" alt="link image of weapons section"></a></li>
-                    <li><a><img class="micon" src="../imgs/case.png" alt="link image of cases section"></a></li>
+                    <li><a href="../pages/weapons.html"><img class="micon" src="../imgs/rifle.png" height="30px" alt="link image of weapons section"></a></li>
+                    <li><a href="../pages/cases.html"><img class="micon" src="../imgs/case.png" alt="link image of cases section"></a></li>
                 </ul>
             </menu>
         </nav>
-        <div class="knives-section">
-            <div class="knife-title">
+        <section class="knives-section">
+            <header class="knife-title">
                 <img src="../imgs/knife-icon.png" alt="knive title icon">
                 <h1>Knives</h1>
-            </div>
-            <div class="knives-area">
-                <div class="knife">
+            </header>
+            <section class="knives-area">
+                <article class="knife">
                     <h2>Flip Knife | Tiger Tooth</h2>
                     <img src="../imgs/knife1.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-                <div class="knife">
+                </article>
+                <article class="knife">
                     <h2>Stiletto Knife | Vannila</h2>
                     <img src="../imgs/knife2.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-                <div class="knife">
+                </article>
+                <article class="knife">
                     <h2>M9 Bayonet | Fade</h2>
                     <img src="../imgs/knife3.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-                <div class="knife">
+                </article>
+                <article class="knife">
                     <h2>Karambit | Gamma Doppler</h2>
                     <img src="../imgs/knife4.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-                <div class="knife">
+                </article>
+                <article class="knife">
                     <h2>Butterfly Knife | Marble Fade</h2>
                     <img src="../imgs/knife5.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-                <div class="knife">
+                </article>
+                <article class="knife">
                     <h2>Flip Knife | Marble Fade</h2>
                     <img src="../imgs/knife6.png" alt="CSGO knife image">
                     <a href="">Open</a>  
-                </div>
-            </div>
-        </div>
+                </article>
+            </section>
+        </section>
         <footer class="footer-container">
             <div class="footer-logo">
                 <a href="../index.html"><img src="../imgs/logo.png" alt="Logo image on footer"></a>
             </div>
             <div>
                 <ul class="footer-links">
-                    <li><a href="">CASES</a></li>
-                    <li><a href="">WEAPONS</a></li>
-                    <li><a href="">KNIVES</a></li>
+                    <li><a href="../pages/cases.html">CASES</a></li>
+                    <li><a href="../pages/weapons.html">WEAPONS</a></li>
+                    <li><a href="../pages/knives.html">KNIVES</a></li>
                 </ul> 
             </div>
             <div>
