--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -9,17 +9,17 @@
     <body>
         <!---------------------------------------HEADER SECTION------------------------------------------>
         <nav>
-            <a id="logo" href="index.html"><img src="../imgs/logo.png" height="80px" alt="site logo"></a>
+            <a id="logo" href="../index.html"><img src="../imgs/logo.png" height="80px" alt="site logo"></a>
             <menu>
                 <ul>
                     <li><a href="../pages/knives.html"><img class="micon" src="../imgs/knife.png" alt="link image of knives section"></a></li>
-                    <li><a href="pages/weapons.html"><img class="micon" src="../imgs/rifle.png" height="30px" alt="link image of weapons section"></a></li>
-                    <li><a><img class="micon" src="../imgs/case.png" alt="link image of cases section"></a></li>
+                    <li><a href="../pages/weapons.html"><img class="micon" src="../imgs/rifle.png" height="30px" alt="link image of weapons section"></a></li>
+                    <li><a href="../pages/cases.html"><img class="micon" src="../imgs/case.png" alt="link image of cases section"></a></li>
                 </ul>
             </menu>
         </nav>
         <!---------------------------------------MAIN SECTION------------------------------------------>
-        <main class="weapons-section">
+        <section class="weapons-section">
             <header class="weapons-title">
                 <img src="../imgs/reticle.svg" alt="Reticle images">
                 <h1>Weapons</h1>
@@ -56,7 +56,7 @@
                     <a href="">Open</a>                    
                 </article>
             </section>
-        </main>
+        </section>
         <!---------------------------------------FOOTER SECTION------------------------------------------>
         <footer class="footer-container">
             <div class="footer-logo">
@@ -64,9 +64,9 @@
             </div>
             <div>
                 <ul class="footer-links">
-                    <li><a href="">CASES</a></li>
-                    <li><a href="">WEAPONS</a></li>
-                    <li><a href="">KNIVES</a></li>
+                    <li><a href="../pages/cases.html">CASES</a></li>
+                    <li><a href="../pages/weapons.html">WEAPONS</a></li>
+                    <li><a href="../pages/knives.html">KNIVES</a></li>
                 </ul> 
             </div>
             <div>
