update cases page

--- a/pages/cases.html
+++ b/pages/cases.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Cases</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/gabriel.css">
@@ -29,28 +29,29 @@
 
         </nav>
         
+        <div class="title"><img src="../imgs/cases.png" alt="cases"></div>
+
+        <div class="wrapper">
         <section class="cases">
 
-            <div class="item1"><img class="case" src="../imgs/cases/bfang.webp"></div>
-            <div class="item2"><img class="case" src="../imgs/cases/chroma.png"></div>
-            <div class="item3"><img class="case" src="../imgs/cases/chroma2.png"></div>
-            <div class="item4"><img class="case" src="../imgs/cases/chroma3.png"></div>
-            <div class="item5"><img class="case" src="../imgs/cases/cs20.png"></div>
-            <div class="item6"><img class="case" src="../imgs/cases/drms.png"></div>
-            <div class="item7"><img class="case" src="../imgs/cases/dzone.png"></div>
-            <div class="item8"><img class="case" src="../imgs/cases/fracture.png"></div>
-            <div class="item9"><img class="case" src="../imgs/cases/prisma.png"></div>
-            <div class="item10"><img class="case" src="../imgs/cases/prisma2.png"></div>
-            <div class="item11"><img class="case" src="../imgs/cases/recoil_case.webp"></div>
-            <div class="item12"><img class="case" src="../imgs/cases/revolution.webp"></div>
-            <div class="item13"><img class="case" src="../imgs/cases/riptide.png"></div>
-            <div class="item14"><img class="case" src="../imgs/cases/shatterw.png"></div>
-            <div class="item15"><img class="case" src="../imgs/cases/snakebite.png"></div>
-            <div class="item16"><img class="case" src="../imgs/cases/wc.png"></div>
-            <div class="item17"><img class="case" src="../imgs/cases/wc2.png"></div>
-            <div class="item18"><img class="case" src="../imgs/cases/wc3.png"></div>
+            <div class="c1"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/wc.png" alt="weapons case"></a></div>
+            <div class="c2"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/chroma.png" alt="chroma case"></a></div>
+            <div class="c3"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/chroma2.png" alt="chroma case 2"></a></div>
+            <div class="c4"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/chroma3.png" alt="chroma case 3"></a></div>
+            <div class="c5"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/cs20.png" alt="cs20 case"></a></div>
+            <div class="c6"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/wc2.png" alt="weapons case 2"></a></div>
+            <div class="c7"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/dzone.png" alt="danger zone case"></a></div>
+            <div class="c8"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/fracture.png" alt="fracture case"></a></div>
+            <div class="c9"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/drms.png" alt="dreams and nightmares case"></a></div>
+            <div class="c10"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/riptide.png" alt="riptide case"></a></div>
+            <div class="c11"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/wc3.png" alt="weapons case 3"></a></div>
+            <div class="c12"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/prisma.png" alt="prisma case"></a></div>
+            <div class="c13"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/prisma2.png" alt="prisma 2 case"></a></div>
+            <div class="c14"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/shatterw.png" alt="shattered web case"></a></div>
+            <div class="c15"><a href="https://steamcommunity.com/market/search?appid=730"><img class="case" src="../imgs/cases/snakebite.png" alt="snakebite case"></a></div>
 
         </section>
+        </div>
 
         <footer class="footer-container">
             <div class="footer-logo">
