--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="description" content="home page">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/gabriel.css">
-
+        <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
     </head>
 
     <body>
@@ -37,15 +37,15 @@
 
         <main>
 
-            <div class="item1"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item2"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item3"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item4"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item5"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item6"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item7"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item8"><img class="mainimg" src="imgs/awp.png"></div>
-            <div class="item9"><img class="mainimg" src="imgs/awp.png"></div>
+            <div class="item1"><a href="pages/weapons.html"><img class="maingun" src="imgs/awp.png" alt="AWP"></a></div>
+            <div class="item2"><a href="pages/knives.html"><img class="maingun" src="imgs/knife5.png" alt="Butterfly Knife"></a></div>
+            <div class="item3"><a href="pages/cases.html"><img class="mainimg" src="imgs/cases/wc.png" alt="Weapons case"></a></div>
+            <div class="item4"><a href="pages/weapons.html"><img class="maingun" src="imgs/m4a4.png" alt="M4A4"></a></div>
+            <div class="item5"><a href="pages/knives.html"><img class="maingun" src="imgs/knife4.png" alt="Karambit"></a></div>
+            <div class="item6"><a href="pages/cases.html"><img class="mainimg" src="imgs/cases/wc2.png" alt="Weapons case 2"></a></div>
+            <div class="item7"><a href="pages/weapons.html"><img class="maingun" src="imgs/ak-47.png" alt="AK-47"></a></div>
+            <div class="item8"><a href="pages/knives.html"><img class="maingun" src="imgs/knife6.png" alt="Talon knife"></a></div>
+            <div class="item9"><a href="pages/cases.html"><img class="mainimg" src="imgs/cases/wc3.png" alt="Weapons case 3"></a></div>
 
         </main>
 
