--- a/pages/cases.html
+++ b/pages/cases.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/gabriel.css">
+        <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
     </head>
     <body>
         
