--- a/pages/knives.html
+++ b/pages/knives.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>knife</title>
+        <title>Knives</title>
         <link rel="stylesheet" href="../css/mao.css">
+        <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
     </head>
     <body>
         <nav>
