--- a/pages/weapons.html
+++ b/pages/weapons.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Weapons</title>
         <link rel="stylesheet" href="../css/mao.css">
+        <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
     </head>
     <body>
         <!---------------------------------------HEADER SECTION------------------------------------------>
